usr/src/uts/common/fs/nfs/nfs3_srv.c
@@ -18,10 +18,11 @@
  *
  * CDDL HEADER END
  */
+
 /*
+ * Copyright 2015 Nexenta Systems, Inc.  All rights reserved.
  * Copyright (c) 1994, 2010, Oracle and/or its affiliates. All rights reserved.
  * Copyright (c) 2013 by Delphix. All rights reserved.
- * Copyright 2014 Nexenta Systems, Inc.  All rights reserved.
  */
 
 /* Copyright (c) 1983, 1984, 1985, 1986, 1987, 1988, 1989 AT&T */
@@ -466,8 +467,7 @@ rfs3_lookup(LOOKUP3args *args, LOOKUP3res *resp, struct exportinfo *exi,
 				if (exi != NULL)
 					exi_rele(exi);
 				VN_RELE(vp);
-				resp->status = NFS3ERR_ACCES;
-				error = 1;
+				error = EACCES;
 			}
 			if (tp != NULL)
 				TPC_RELE(tp);
@@ -493,8 +493,7 @@ rfs3_lookup(LOOKUP3args *args, LOOKUP3res *resp, struct exportinfo *exi,
 				if (publicfh_flag && exi != NULL)
 					exi_rele(exi);
 				VN_RELE(vp);
-				resp->status = NFS3ERR_ACCES;
-				error = 1;
+				error = EACCES;
 			}
 		}
 	}
